fix program alignment on desktop

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -178,7 +178,7 @@ dt {
   margin-bottom: $li-bottom-space;
 
   @media (max-width: 38rem){
-    width: 55%;
+    width: 58%;
     font-size: .8rem;
   }
 }
@@ -188,7 +188,7 @@ dd {
   margin-bottom: $li-bottom-space;
 
   @media (max-width: 38rem){
-    margin-left: 58%;
+    margin-left: 62%;
     font-size: .8rem;
   }
 }
