--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,6 +57,6 @@ $ol-bullets-right-space: 0.65em;
 
 $li-child-size-ratio: 0.95;
 
-$dt-width: 58%;
+$dt-width: 48%;
 $dt-dd-space: 4%;
 $dd-position: $dt-width+$dt-dd-space
